--- a/micro-java/pom.xml
+++ b/micro-java/pom.xml
@@ -17,8 +17,8 @@
     <quarkus.platform.group-id>com.redhat.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.11.6.Final-redhat-00001</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <!-- Property to force using Deployments over DeploymentConfig objects goes here. -->
-  </properties>
+    <jkube.build.switchToDeployment>true</jkube.build.switchToDeployment>
+ </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -76,7 +76,13 @@
   </pluginRepositories>
   <build>
     <plugins>
-      <plugin>
+	    <!-- JKube Maven plugin -->
+	     <plugin>
+		      <groupId>org.eclipse.jkube</groupId>
+		       <artifactId>openshift-maven-plugin</artifactId>
+		        <version>1.2.0</version>
+			 </plugin>
+        <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus-plugin.version}</version>
@@ -136,8 +142,8 @@
                 </configuration>
               </execution>
             </executions>
-          </plugin>
-        </plugins>
+    </plugin>
+     </plugins>
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
